--- a/nginx.conf
+++ b/nginx.conf
@@ -1,25 +1,24 @@
-user                            root;
-worker_processes                auto;
+# user                            root;
+# worker_processes                auto;
 
-error_log                       /var/log/nginx/error.log warn;
+# error_log                       /var/log/nginx/error.log warn;
 
-events {
-    worker_connections          1024;
-}
+# events {
+#     worker_connections          1024;
+# }
 
-#    <h1>Wazid Home Page | 2023.06.25 | 1900 </h1>
 
-http {
-    include                     /etc/nginx/mime.types;
-    default_type                application/octet-stream;
-    sendfile                    off;
-    access_log                  off;
-    keepalive_timeout           3000;
-    server {
-        listen                  8080;
-        root                    /usr/share/nginx/html;
-        index                   index.html;
-        server_name             localhost;
-        client_max_body_size    16m;
-    }
-}
+# http {
+#     include                     /etc/nginx/mime.types;
+#     default_type                application/octet-stream;
+#     sendfile                    off;
+#     access_log                  off;
+#     keepalive_timeout           3000;
+#     server {
+#         listen                  8080;
+#         root                    /usr/share/nginx/html;
+#         index                   index.html;
+#         server_name             localhost;
+#         client_max_body_size    16m;
+#     }
+# }
