--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,10 +19,10 @@ steps:
 - task: Docker@2
   displayName: Pushing on Docker Hub
   inputs:
-    containerRegistry: 'bhargavd1995-dockerhub'
-    repository: 'bhargavd1995/k8s-repository'
+    containerRegistry: 'mohdwazid-dockerhub'
+    repository: 'mohdwazid/k8s-docker-repo'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
-    tags: 'latest'
+    tags: latest
     addPipelineData: false
     addBaseImageData: false
