--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,8 +19,8 @@ steps:
 - task: Docker@2
   displayName: Pushing on Docker Hub
   inputs:
-    containerRegistry: 'mohdwazid-dockerhub'
-    repository: 'mohdwazid/k8s-docker-repo'
+    containerRegistry: 'bhargavd1995-dockerhub'
+    repository: 'bhargavd1995/k8s-repository'
     command: 'buildAndPush'
     Dockerfile: '**/Dockerfile'
     tags: latest
